@@ -15,23 +15,28 @@ plugins {
   id 'idea'
   id 'eclipse'
   id 'project-report'
-  id 'com.diffplug.spotless' version '5.17.1'
-  id 'com.github.johnrengelman.shadow' version '6.1.0'
-  id "org.sonarqube" version "3.3"
+  id 'com.diffplug.spotless' version '6.21.0'
+  id 'com.github.johnrengelman.shadow' version '8.1.0'
+  id "org.sonarqube" version "4.3.1.3277"
   id 'jacoco'
 }
 
-group = 'com.github.tomakehurst'
+group = 'org.wiremock'
 
 project.ext {
   versions = [
-    handlebars     : '4.3.0',
-    jetty          : '9.4.44.v20210927',
-    guava          : '31.0.1-jre',
-    jackson        : '2.13.0',
-    xmlUnit        : '2.8.3',
-    junitJupiter   : '5.8.1'
+    handlebars     : '4.3.1',
+    jetty          : '11.0.16',
+    guava          : '32.1.2-jre',
+    jackson        : '2.15.2',
+    xmlUnit        : '2.9.1',
+    jsonUnit       : '2.38.0',
+    junitJupiter   : '5.10.0'
   ]
+}
+
+configurations {
+  standaloneOnly
 }
 
 dependencies {
@@ -44,27 +49,32 @@ dependencies {
   api "org.eclipse.jetty.http2:http2-server"
   api "org.eclipse.jetty:jetty-alpn-server"
   api "org.eclipse.jetty:jetty-alpn-java-server"
-  api "org.eclipse.jetty:jetty-alpn-openjdk8-server"
   api "org.eclipse.jetty:jetty-alpn-java-client"
-  api "org.eclipse.jetty:jetty-alpn-openjdk8-client"
+  api "org.eclipse.jetty:jetty-alpn-client"
 
-  api "com.google.guava:guava:$versions.guava"
+  api "com.google.guava:guava:$versions.guava", {
+    exclude group: 'com.google.code.findbugs', module: 'jsr305'
+  }
   api platform("com.fasterxml.jackson:jackson-bom:$versions.jackson")
   api "com.fasterxml.jackson.core:jackson-core",
       "com.fasterxml.jackson.core:jackson-annotations",
-      "com.fasterxml.jackson.core:jackson-databind"
-  api "org.apache.httpcomponents.client5:httpclient5:5.1"
+      "com.fasterxml.jackson.core:jackson-databind",
+      "com.fasterxml.jackson.datatype:jackson-datatype-jsr310"
+  api "org.apache.httpcomponents.client5:httpclient5:5.2.1"
   api "org.xmlunit:xmlunit-core:$versions.xmlUnit"
   api "org.xmlunit:xmlunit-legacy:$versions.xmlUnit", {
     exclude group: 'junit', module: 'junit'
   }
   api "org.xmlunit:xmlunit-placeholders:$versions.xmlUnit"
-  api 'net.javacrumbs.json-unit:json-unit-core:2.28.0'
-  api "com.jayway.jsonpath:json-path:2.6.0", {
+  api "net.javacrumbs.json-unit:json-unit-core:$versions.jsonUnit"
+  api "com.jayway.jsonpath:json-path:2.8.0", {
     exclude group: 'org.ow2.asm', module: 'asm'
   }
-  api "org.ow2.asm:asm:9.2"
-  api "org.slf4j:slf4j-api:1.7.32"
+  api "org.ow2.asm:asm:9.5"
+
+  implementation "org.slf4j:slf4j-api:1.7.36"
+  standaloneOnly "org.slf4j:slf4j-nop:1.7.36"
+
   api "net.sf.jopt-simple:jopt-simple:5.0.4"
 
   compileOnly("junit:junit:4.13.2") {
@@ -73,7 +83,7 @@ dependencies {
   compileOnly(platform("org.junit:junit-bom:$versions.junitJupiter"))
   compileOnly("org.junit.jupiter:junit-jupiter")
 
-  api 'org.apache.commons:commons-lang3:3.12.0'
+  api 'org.apache.commons:commons-lang3:3.13.0'
   api "com.github.jknack:handlebars:$versions.handlebars", {
     exclude group: 'org.mozilla', module: 'rhino'
   }
@@ -81,36 +91,38 @@ dependencies {
     exclude group: 'org.mozilla', module: 'rhino'
   }
 
-  api 'commons-fileupload:commons-fileupload:1.4',  {
+  api 'commons-fileupload:commons-fileupload:1.5',  {
     exclude group: 'commons-io', module: 'commons-io'
   }
-  api "commons-io:commons-io:2.11.0"
+  api "commons-io:commons-io:2.13.0"
+
+  api 'com.networknt:json-schema-validator:1.0.86'
 
   testImplementation "junit:junit:4.13"
   testImplementation("org.junit.jupiter:junit-jupiter:$versions.junitJupiter")
   testImplementation("org.junit.platform:junit-platform-testkit")
   testRuntimeOnly("org.junit.vintage:junit-vintage-engine")
   testImplementation("org.junit.platform:junit-platform-launcher")
-  testImplementation 'org.mockito:mockito-junit-jupiter:4.0.0'
+  testImplementation("org.junit.jupiter:junit-jupiter-params")
+  testImplementation('org.junit-pioneer:junit-pioneer:2.0.1')
 
   testImplementation "org.hamcrest:hamcrest-core:2.2"
   testImplementation "org.hamcrest:hamcrest-library:2.2"
-  testImplementation 'org.mockito:mockito-core:3.12.4'
-  testImplementation 'org.mockito:mockito-junit-jupiter:4.0.0'
-  testImplementation 'net.javacrumbs.json-unit:json-unit:2.28.0'
+  testImplementation 'org.mockito:mockito-core:5.5.0'
+  testImplementation 'org.mockito:mockito-junit-jupiter:5.5.0'
+  testImplementation "net.javacrumbs.json-unit:json-unit:$versions.jsonUnit"
   testImplementation "org.skyscreamer:jsonassert:1.2.3"
-  testImplementation 'com.toomuchcoding.jsonassert:jsonassert:0.6.1'
-  testImplementation 'org.awaitility:awaitility:4.1.1'
+  testImplementation 'com.toomuchcoding.jsonassert:jsonassert:0.6.2'
+  testImplementation 'org.awaitility:awaitility:4.2.0'
   testImplementation "com.googlecode.jarjar:jarjar:1.3"
-  testImplementation "commons-io:commons-io:2.10.0"
-  testImplementation 'org.scala-lang:scala-library:2.13.7'
-  testImplementation 'com.tngtech.archunit:archunit-junit5:0.22.0'
+  testImplementation "commons-io:commons-io:2.13.0"
+  testImplementation 'org.scala-lang:scala-library:2.13.12'
+  testImplementation 'com.tngtech.archunit:archunit-junit5:0.23.1'
 
   testImplementation "org.eclipse.jetty:jetty-client"
   testImplementation "org.eclipse.jetty.http2:http2-http-client-transport"
-
-  testRuntimeOnly platform("org.apache.logging.log4j:log4j-bom:2.14.1")
-  testRuntimeOnly "org.apache.logging.log4j:log4j-slf4j-impl"
+  testRuntimeOnly "org.slf4j:log4j-over-slf4j:2.0.9"
+  testRuntimeOnly "ch.qos.logback:logback-classic:1.4.0"
   testRuntimeOnly files('src/test/resources/classpath file source/classpathfiles.zip', 'src/test/resources/classpath-filesource.jar')
 
   testImplementation ('net.jockx:littleproxy:1.1.3') {
@@ -119,10 +131,12 @@ dependencies {
     exclude group: 'org.slf4j', module: 'slf4j-api'
     exclude group: 'io.netty', module: 'netty-all'
   }
-  testImplementation "io.netty:netty-all:4.1.70.Final"
+  testImplementation "io.netty:netty-all:4.1.97.Final"
+
+  testImplementation files('test-extension/test-extension.jar')
 
   constraints {
-    implementation "net.minidev:json-smart:2.4.7", {
+    implementation "net.minidev:json-smart:2.5.0", {
       because 'Pinning this above the transitive version from json-path to get CVE fix'
     }
   }
@@ -133,11 +147,12 @@ allprojects {
   spotless {
     java {
       target 'src/**/*.java'
-      googleJavaFormat('1.7')
+      googleJavaFormat('1.17.0')
       licenseHeaderFile "${rootDir}/gradle/spotless.java.license.txt"
       ratchetFrom 'origin/master'
       trimTrailingWhitespace()
       endWithNewline()
+      targetExclude '**/Tmp*.java'
     }
     groovyGradle {
       target '**/*.gradle'
@@ -148,9 +163,14 @@ allprojects {
     }
     json {
       target 'src/**/*.json'
-      targetExclude 'src/test/resources/sample.json'
+      targetExclude '**/tmp*.json', 'src/test/resources/sample.json', 'src/main/resources/swagger/*.json', 'src/test/resources/filesource/subdir/deepfile.json', 'src/test/resources/schema-validation/*.json'
       simple().indentWithSpaces(2)
     }
+  }
+
+  tasks.withType(AbstractArchiveTask).configureEach {
+    preserveFileTimestamps = false
+    reproducibleFileOrder = true
   }
 
   ext {
@@ -161,7 +181,6 @@ allprojects {
 
     pomInfo = {
       name 'WireMock'
-      description 'A web service test double for all occasions'
       url 'http://wiremock.org'
       scm {
         connection 'https://github.com/wiremock/wiremock.git'
@@ -188,21 +207,24 @@ allprojects {
     mavenCentral()
   }
 
-  version = '2.32.0'
+  version = '3.0.3'
 
-  sourceCompatibility = 1.8
-  targetCompatibility = 1.8
+
+  sourceCompatibility = 11
+  targetCompatibility = 11
 
   compileJava {
     options.encoding = 'UTF-8'
 
     // silences warnings about compiling against `sun` packages
     options.compilerArgs += '-XDenableSunApiLintControl'
+    options.compilerArgs += '--add-exports=java.base/sun.security.x509=ALL-UNNAMED'
   }
 
   compileTestJava {
     options.encoding = 'UTF-8'
     options.compilerArgs += '-XDenableSunApiLintControl'
+    options.compilerArgs += '--add-exports=java.base/sun.security.x509=ALL-UNNAMED'
   }
 
   test {
@@ -222,7 +244,7 @@ allprojects {
 
   jacocoTestReport {
     reports {
-      xml.enabled true
+      xml.required = true
     }
   }
   test.finalizedBy jacocoTestReport
@@ -234,6 +256,8 @@ allprojects {
       property "sonar.host.url", "https://sonarcloud.io"
     }
   }
+
+  shadowJar.dependsOn jar
 }
 
 java {
@@ -247,35 +271,22 @@ task testJar(type: Jar, dependsOn: testClasses) {
 }
 
 final DOCS_DIR = project(':').rootDir.getAbsolutePath() + '/docs-v2'
-task npmInstall(type: Exec) {
-  workingDir DOCS_DIR
-  if (System.getProperty('os.name').toLowerCase(Locale.ROOT).contains('windows')) {
-    commandLine 'cmd', '/c', 'npm', 'i'
-  } else {
-    commandLine 'npm', 'i'
-  }
-}
-
-task generateApiDocs(type: Exec) {
-  dependsOn npmInstall
-  workingDir DOCS_DIR
-  if (System.getProperty('os.name').toLowerCase(Locale.ROOT).contains('windows')) {
-    commandLine 'cmd', '/c', 'npm', 'run', 'apidocs'
-  } else {
-    commandLine 'npm', 'run', 'apidocs'
-  }
-}
 
 jar {
-  archiveBaseName.set('wiremock-jre8')
+  archiveBaseName.set('wiremock')
   manifest {
-    attributes("Main-Class": "com.github.tomakehurst.wiremock.standalone.WireMockServerRunner")
+    attributes("Main-Class": "wiremock.Run")
     attributes("Add-Exports": "java.base/sun.security.x509")
   }
 }
 
 shadowJar {
-  archiveBaseName.set('wiremock-jre8-standalone')
+  archiveBaseName.set('wiremock-standalone')
+  archiveClassifier.set('')
+  configurations = [
+    project.configurations.runtimeClasspath,
+    project.configurations.standaloneOnly
+  ]
 
   relocate "org.mortbay", 'wiremock.org.mortbay'
   relocate "org.eclipse", 'wiremock.org.eclipse'
@@ -296,9 +307,15 @@ shadowJar {
   relocate "net.sf", "wiremock.net.sf"
   relocate "com.github.jknack", "wiremock.com.github.jknack"
   relocate "org.antlr", "wiremock.org.antlr"
-  relocate "javax.servlet", "wiremock.javax.servlet"
+  relocate "jakarta.servlet", "wiremock.jakarta.servlet"
   relocate "org.checkerframework", "wiremock.org.checkerframework"
   relocate "org.hamcrest", "wiremock.org.hamcrest"
+  relocate "org.slf4j", "wiremock.org.slf4j"
+  relocate "joptsimple", "wiremock.joptsimple"
+  exclude 'joptsimple/HelpFormatterMessages.properties'
+  relocate "org.yaml", "wiremock.org.yaml"
+  relocate "com.ethlo", "wiremock.com.ethlo"
+  relocate "com.networknt", "wiremock.com.networknt"
 
   dependencies {
     exclude(dependency('junit:junit'))
@@ -306,7 +323,7 @@ shadowJar {
 
   mergeServiceFiles()
 
-  exclude 'META-INF/maven/javax.servlet/**'
+  exclude 'META-INF/maven/**'
   exclude 'module-info.class'
   exclude 'handlebars-*.js'
 }
@@ -343,6 +360,12 @@ publishing {
     }
   }
 
+  getComponents().withType(AdhocComponentWithVariants).each { c ->
+    c.withVariantsFromConfiguration(project.configurations.shadowRuntimeElements) {
+      skip()
+    }
+  }
+
   publications {
     mavenJava(MavenPublication) { publication ->
       artifactId = "${jar.getArchiveBaseName().get()}"
@@ -350,6 +373,7 @@ publishing {
       artifact testJar
 
       pom.withXml {
+        asNode().appendNode('description', 'A web service test double for all occasions')
         asNode().children().last() + pomInfo
       }
     }
@@ -362,13 +386,6 @@ publishing {
       artifact javadocJar
       artifact testJar
 
-      publication.artifacts.each {
-        // for the shaded JAR
-        if ('all' == it.classifier) {
-          it.classifier = ''
-        }
-      }
-
       pom.packaging 'jar'
       pom.withXml {
         asNode().appendNode('description', 'A web service test double for all occasions - standalone edition')
@@ -376,7 +393,6 @@ publishing {
       }
     }
   }
-
 }
 
 task checkReleasePreconditions {
@@ -384,9 +400,14 @@ task checkReleasePreconditions {
     def REQUIRED_GIT_BRANCH = 'master'
     def currentGitBranch = 'git rev-parse --abbrev-ref HEAD'.execute().text.trim()
     assert currentGitBranch == REQUIRED_GIT_BRANCH, "Must be on the $REQUIRED_GIT_BRANCH branch in order to release to Sonatype"
+    assert JavaVersion.current().isJava8(), 'Must use Java 8 when releasing'
   }
 }
 publish.dependsOn checkReleasePreconditions
+project.tasks.publishMavenJavaPublicationToMavenLocal.dependsOn 'signStandaloneJarPublication'
+project.tasks.publishStandaloneJarPublicationToMavenLocal.dependsOn 'signMavenJavaPublication'
+project.tasks.publishMavenJavaPublicationToMavenRepository.dependsOn 'signStandaloneJarPublication'
+project.tasks.publishStandaloneJarPublicationToMavenRepository.dependsOn 'signMavenJavaPublication'
 
 assemble.dependsOn jar, shadowJar
 
@@ -401,14 +422,47 @@ task release {
   dependsOn clean, assemble, publishAllPublicationsToMavenRepository, addGitTag
 }
 
+task localRelease {
+  dependsOn clean, assemble, publishToMavenLocal
+}
+
+task 'bump-beta-version' {
+  doLast {
+    def filesWithVersion = [
+      'build.gradle'                                      : { "version = '${it}" },
+      'ui/package.json'                                   : { "\"version\": \"${it}\"" },
+      'src/main/resources/swagger/wiremock-admin-api.json': { "\"version\": \"${it}\"" },
+      'src/main/resources/swagger/wiremock-admin-api.yaml': {
+        "version: ${it}"
+      }
+    ]
+
+    def currentVersion = project.version
+    def nextVersion = "3.0.0-beta-${betaVersion + 1}"
+
+    filesWithVersion.each { fileName, lineWithVersionTemplates ->
+      def file = file(fileName)
+      def lineWithVersionTemplateList = [lineWithVersionTemplates].flatten()
+
+      lineWithVersionTemplateList.each { lineWithVersionTemplate ->
+        def oldLine = lineWithVersionTemplate.call(currentVersion)
+        def newLine = lineWithVersionTemplate.call(nextVersion)
+        println "Replacing '${oldLine}' with '${newLine}' in ${fileName}"
+        file.text = file.text.replace(oldLine, newLine)
+      }
+    }
+  }
+}
+
 task 'bump-patch-version' {
   doLast {
     def filesWithVersion = [
       'build.gradle'                                      : { "version = '${it}" },
-      'docs-v2/_config.yml'                               : { "wiremock_version: ${it}" },
-      'docs-v2/package.json'                              : { "version\": \"${it}\"" },
+      'ui/package.json'                                   : { "\"version\": \"${it}\"" },
+      'src/main/resources/swagger/wiremock-admin-api.json': { "\"version\": \"${it}\"" },
       'src/main/resources/swagger/wiremock-admin-api.yaml': {
-        "version: ${it}" }
+        "version: ${it}"
+      }
     ]
 
     def currentVersion = project.version
@@ -432,10 +486,11 @@ task 'bump-minor-version' {
   doLast {
     def filesWithVersion = [
       'build.gradle'                                      : { "version = '${it}" },
-      'docs-v2/_config.yml'                               : { "wiremock_version: ${it}" },
-      'docs-v2/package.json'                              : { "version\": \"${it}\"" },
+      'ui/package.json'                                   : { "\"version\": \"${it}\"" },
+      'src/main/resources/swagger/wiremock-admin-api.json': { "\"version\": \"${it}\"" },
       'src/main/resources/swagger/wiremock-admin-api.yaml': {
-        "version: ${it}" }
+        "version: ${it}"
+      }
     ]
 
     def currentVersion = project.version
@@ -455,6 +510,22 @@ task 'bump-minor-version' {
   }
 }
 
+tasks.withType(JavaCompile) {
+  options.compilerArgs.addAll([
+    "--add-exports",
+    "java.base/sun.security.x509=ALL-UNNAMED"
+  ])
+}
+
+eclipse.classpath.file {
+  whenMerged {
+    entries.find{ it.path ==~ '.*JRE_CONTAINER.*' }.each {
+      it.entryAttributes['module'] = true
+      it.entryAttributes['add-exports'] = 'java.base/sun.security.x509=ALL-UNNAMED'
+    }
+  }
+}
+
 int getMajorVersion() {
   Integer.valueOf(project.version.substring(0, project.version.indexOf('.')))
 }
@@ -465,6 +536,10 @@ int getMinorVersion() {
 
 int getPatchVersion() {
   Integer.valueOf(project.version.substring(project.version.lastIndexOf('.') + 1))
+}
+
+int getBetaVersion() {
+  Integer.valueOf(project.version.substring(project.version.lastIndexOf('-') + 1))
 }
 
 wrapper {
